--- a/Homepage.html
+++ b/Homepage.html
@@ -4,7 +4,7 @@
     <p>
       My learning git Homepage
     </p>
-    <h6> Introduction to github</h6>
+    <h6> Introduction to github version 2</h6>
     <p> Correction made</p>
   </body>
 </html>
